# jaws

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Dockerfile-base  LICENSE  README.md  bind.yml  build.yml  client.py  compose.yaml  core.yaml  deps.yml  describe-queues.sh  describe-topics.sh  docker-compose-dev.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  dump-schemas.sh  epics.yaml  host.env  index.html  jaws-version.env  jlab.yaml  list-schemas.sh  list-topics.sh  pyproject.toml  requirements.txt  requirements_dev.txt  service-versions.env  setup.cfg  test.yml  web.env  web.yaml
.github/workflows/: ci.yml  gh-release.yaml  python.yml
4.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
4.0.0/.doctrees/: environment.pickle  index.doctree
4.0.0/_autosummary/: jaws_scripts.broker.create_topics.html  jaws_scripts.broker.delete_topics.html  jaws_scripts.broker.describe_topics.html  jaws_scripts.broker.html  jaws_scripts.broker.list_topics.html  jaws_scripts.broker.show_consumer_groups.html  jaws_scripts.client.html  jaws_scripts.client.list_activations.html  jaws_scripts.client.list_categories.html  jaws_scripts.client.list_classes.html  jaws_scripts.client.list_effective_activations.html  jaws_scripts.client.list_effective_alarms.html  jaws_scripts.client.list_effective_registrations.html  jaws_scripts.client.list_instances.html  jaws_scripts.client.list_locations.html  jaws_scripts.client.list_overrides.html  jaws_scripts.client.set_activation.html  jaws_scripts.client.set_category.html  jaws_scripts.client.set_class.html  jaws_scripts.client.set_effective_activation.html  jaws_scripts.client.set_effective_alarm.html  jaws_scripts.client.set_effective_registration.html  jaws_scripts.client.set_instance.html  jaws_scripts.client.set_location.html  jaws_scripts.client.set_override.html  jaws_scripts.html  jaws_scripts.registry.create_schemas.html  jaws_scripts.registry.delete_schemas.html  jaws_scripts.registry.describe_schemas.html  jaws_scripts.registry.describe_version.html  jaws_scripts.registry.html  jaws_scripts.registry.list_schemas.html
4.5.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
4.5.2/.doctrees/: environment.pickle  index.doctree
4.5.2/_autosummary/: jaws_scripts.broker.create_topics.html  jaws_scripts.broker.delete_topics.html  jaws_scripts.broker.describe_topics.html  jaws_scripts.broker.html  jaws_scripts.broker.list_topics.html  jaws_scripts.broker.show_consumer_groups.html  jaws_scripts.client.html  jaws_scripts.client.list_activations.html  jaws_scripts.client.list_categories.html  jaws_scripts.client.list_classes.html  jaws_scripts.client.list_effective_alarms.html  jaws_scripts.client.list_effective_notifications.html  jaws_scripts.client.list_effective_registrations.html  jaws_scripts.client.list_instances.html  jaws_scripts.html  (+17 more)
active-alarms/: list-active.py  set-active.py
alarms/: list-alarms.py  set-alarm.py
config/: schema-registry.json  schemas.json
docs/: ActiveAlarmMessageFlow.pptx  AlarmProcessorDiagram.pptx
docsrc/: AlarmProcessorDiagram.pptx
examples/: alarm-registrations  docker-compose-epics.yml  jlab-alarms.avro-json
jlab/: compose.yaml  deploy.sh
jlab-release/: compose.yaml
monitored-pvs/: list-monitored.py  set-monitored.py  unset-monitored.py
schemas/: active-alarms-key.avsc  active-alarms-value.avsc  registered-alarms-value.avsc  shelved-alarms-value.avsc
scripts/: client.py
shelved-alarms/: list-shelved.py  set-shelved.py
tests/: conftest.py  test_activation.py  test_category.py  test_category_async.py  test_class.py  test_clients.py  test_effective_activation.py  test_effective_notification.py  test_instance.py  test_location.py  test_override.py
(+308 files in other folders)
