[metadata]
name = jaws-scripts
version = 4.2.0
author = Ryan Slominski
author_email = ryans@jlab.org
description = JLab Alarm Warning System (JAWS) Admin Scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeffersonLab/jaws
project_urls =
    Bug Tracker = https://github.com/JeffersonLab/jaws/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    jaws-libp==4.2.1
    click==7.1.2
[options.packages.find]
where = src