[metadata]
name = jaws-scripts
version = 4.5.3
author = Ryan Slominski
author_email = ryans@jlab.org
description = JLab Alarm Warning System (JAWS) Admin Scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeffersonLab/jaws
project_urls =
    Bug Tracker = https://github.com/JeffersonLab/jaws/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    jaws-libp==4.4.1
    click>=7.1.2

[options.extras_require]
dev = build>=0.8.0
      pytest>=7.1.2
      pylint>=2.14.4
      Sphinx>=5.0.2
      sphinx_click>=4.3.0
      sphinx-rtd-theme>=1.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    create_topics = jaws_scripts.broker.create_topics:create_topics
    delete_topics = jaws_scripts.broker.delete_topics:delete_topics
    describe_topics = jaws_scripts.broker.describe_topics:describe_topics
    list_topics = jaws_scripts.broker.list_topics:list_topics
    show_consumer_groups = jaws_scripts.broker.show_consumer_groups:show_consumer_groups
    list_activations = jaws_scripts.client.list_activations:list_activations
    list_categories = jaws_scripts.client.list_categories:list_categories
    list_classes = jaws_scripts.client.list_classes:list_classes
    list_effective_notifications = jaws_scripts.client.list_effective_notifications:list_effective_notifications
    list_effective_alarms = jaws_scripts.client.list_effective_alarms:list_effective_alarms
    list_effective_registrations = jaws_scripts.client.list_effective_registrations:list_effective_registrations
    list_instances = jaws_scripts.client.list_instances:list_instances
    list_locations = jaws_scripts.client.list_locations:list_locations
    list_overrides = jaws_scripts.client.list_overrides:list_overrides
    set_activation = jaws_scripts.client.set_activation:set_activation
    set_category = jaws_scripts.client.set_category:set_category
    set_class = jaws_scripts.client.set_class:set_class
    set_effective_notification = jaws_scripts.client.set_effective_notification:set_effective_notification
    set_effective_alarm = jaws_scripts.client.set_effective_alarm:set_effective_alarm
    set_effective_registration = jaws_scripts.client.set_effective_registration:set_effective_registration
    set_instance = jaws_scripts.client.set_instance:set_instance
    set_location = jaws_scripts.client.set_location:set_location
    set_override = jaws_scripts.client.set_override:set_override
    create_schemas = jaws_scripts.registry.create_schemas:create_schemas
    delete_schemas = jaws_scripts.registry.delete_schemas:delete_schemas
    describe_schemas = jaws_scripts.registry.describe_schemas:describe_schemas
    describe_version = jaws_scripts.registry.describe_version:describe_version
    list_schemas = jaws_scripts.registry.list_schemas:list_schemas